src/scenes/Office/office.css
.queue-table {
  font-size: 0.75em;
  min-width: 1000px;
}

.queue-table-scrollable {
  overflow-x: scroll;
}

.fake-link {
  text-decoration: underline;
  color: blue;
}

.icon {
  margin: 0 0.3em 0 0.3em;
}

.form-column {
  display: inline-block;
  width: 45%;
  margin-right: 5%;
}

/* Use with .usa-grid for a liquid and nearly full-width grid layout. */
.grid-wide {
  max-width: 2000px;
  margin: auto;
  padding: 0 2em;
}

.move-info-header-meta {
  list-style: none outside;
  border-top: solid 1px rgb(222, 222, 222);
  margin: 0;
  padding: 2px 0 0;
}

.move-info-header-meta .icon {
  margin: 0 0.4em;
}

.move-info-header-meta li {
  display: inline-block;
  margin-bottom: 0;
}

.move-info-header-meta li:after {
  content: '-';
  margin: 0 0.8em;
}

.move-info-header-meta li:last-child:after {
  content: none;
  margin: 0;
}

.nav-controls {
  text-align: right;
  padding-top: 0.5em;
  font-size: 0.9em;
}

.tabs {
  margin-top: 2em;
}

.tabs .nav-tab {
  border: solid 1px black;
  border-radius: 4px 4px 0 0;
  padding: 4px 42px 8px 42px;
  margin-left: 8px;
  display: inline-block;
  text-decoration: none;
  color: black;
  background-color: #ececec;
}

.tabs .nav-tab .status,
.tabs .nav-tab .title {
  display: block;
  text-align: center;
}

.tabs .nav-tab .status {
  font-size: 0.7em;
  margin-top: 2px;
}

.tabs .nav-tab.active {
  border-bottom-color: white;
  background-color: white;
}

.tabs .nav-tab.active .title {
  font-weight: bold;
}

.tabs .nav-tab .icon {
  margin-right: 4px;
}

.tab-content {
  border-top: solid 1px black;
  margin-top: -1px;
  padding-top: 2rem;
}

.documents {
  border: solid 1px black;
  padding: 1em;
  margin-top: 1em;
}

.documents .usa-heading {
  margin-top: 0;
  font-size: 2rem;
}

.documents .usa-heading .icon {
  margin-left: 0.5em;
  font-size: 1.7rem;
  vertical-align: baseline;
}

.documents .document .icon {
  margin-right: 0.3em;
}

.orders-page-column {
  background: lightgray;
}

.orders-page-column .pdf-placeholder {
  padding: 1em;
  background: white;
  font-style: italic;
  text-align: right;
}

.orders-page-column .pdf-placeholder .filename {
  font-weight: bold;
  font-style: normal;
  float: left;
}

.orders-page-column .page {
  padding: 1em;
}

.orders-page-fields h3 {
  margin-bottom: 0;
}

.orders-page-fields .uploaded-at {
  font-size: 0.8em;
  color: gray;
  margin-top: 0;
}

.panel-field.contact-prefs .field-value span {
  margin-right: 1em;
}
.panel-field.contact-prefs .field-value svg {
  margin-right: 4px;
  font-size: 0.8em;
}

head .panel-subhead {
  font-weight: bold;
  margin-top: 4rem;
}

.panel-subhead + .usa-input .usa-input-label {
  margin-top: 1rem;
}

.editable-panel-column fieldset {
  margin-top: 4rem;
}

.editable-panel-column legend {
  font-size: 1.7rem;
}

.editable-panel-column fieldset label {
  margin-top: 2rem;
}

.editable-panel-column fieldset label:first-of-type {
  margin-top: 0;
}

.usa-input.duty-station p {
  margin-bottom: 0;
}

.usa-input.duty-station .duty-input-box {
  margin-left: 0.1em;
}

.usa-input.duty-station p.location {
  display: none;
}

.payment-panel {
  border: solid #f1f1f1;
  border-width: 3px;
  width: 100%;
  empty-cells: hide;
}

.payment-table {
  margin: 1em;
}

.payment-table td,
.payment-table th {
  border: none;
}

.payment-table a {
  cursor: pointer;
}

.payment-table .icon {
  margin-left: 1.5em;
  font-size: 1.7rem;
  vertical-align: baseline;
}

.payment-panel-title {
  font-size: 1.7rem;
  font-weight: bold;
  background-color: #f1f1f1;
  padding: 0.4em 1em;
  border: 3px solid #f1f1f1;
  width: 100%;
}

.payment-table .payment-table-column-title {
  font-weight: bold;
  font-size: 0.9em;
  border-bottom: solid 1px #a2a2a2;
  width: 15%;
}

.payment-table .payment-table-subheader {
  font-weight: bold;
  font-size: 0.9em;
  border-bottom: solid 1px #f1f1f1;
  width: 90%;
}

.payment-table .payment-table-column-content {
  border-bottom: solid 1px #f1f1f1;
  position: relative;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 200px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px;
  position: absolute;
  z-index: 1;
  top: 60px;
  margin-left: -105px;
}

.tooltip .tooltiptext::after {
  content: '';
  position: absolute;
  bottom: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent black transparent;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
}

.approval-ready {
  color: green;
  cursor: pointer;
}

.approval-waiting {
  color: #fdb81e;
}

.approval-blocked {
  color: gray;
}

.payment-action {
  color: #0071bc;
  cursor: pointer;
}

